# dbuilder

./: .gitignore  DBuilder.slnx  Directory.Build.props  README.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEVELOPMENT_PROCESS.md  FEATURE_SUPPORT.md  MAP_IO_AND_RESOURCES.md  MIGRATION.md  PARITY_MATRIX.md  PHASED_PLAN.md  PLATFORMS_AND_TOOLS.md  PLUGIN_API.md  RENDERING.md  TODO.md  UPDATE_POLICY.md  parity-matrix.json
rust/: Cargo.toml
rust/crates/dbuilder-map/: Cargo.toml
rust/crates/dbuilder-map/src/: blockmap.rs  lib.rs  selection.rs
rust/crates/dbuilder-rendering/: Cargo.toml
rust/crates/dbuilder-rendering/src/: lib.rs
scripts/: package-linux-tar.sh  package-macos-app.sh  package-smoke.sh  package-windows-zip.sh  release-build.sh  verify.sh
src/DBuilder.Editor/: AboutWindow.cs  App.axaml  App.axaml.cs  AutoSaveRecoveryDialog.cs  BitmapConvert.cs  BlockmapExplorerWindow.cs  BrowserDialog.cs  CenterOnCoordinatesDialog.cs  ChangeMapElementIndexDialog.cs  CommandPaletteWindow.cs  CommentsPanelWindow.cs  ConfigDialog.cs  ConfigResourcesDialog.cs  CustomFieldsDialog.cs  DBuilder.Editor.csproj  DirectionalShadingDialog.cs  DynamicLightDialog.cs  EditorAssetPaths.cs  ErrorLogWindow.cs  ExceptionDialog.cs  FilterSelectedThingsDialog.cs  FindReplaceWindow.cs  GridSetupDialog.cs  IdStudioExportDialog.cs  ImageExportDialog.cs  JitterDialog.cs  LinedefColorPresetsDialog.cs  MacAppBundleLauncher.cs  MacApplicationActivator.cs  MainWindow.axaml  MainWindow.axaml.cs  MakeDoorDialog.cs  MapCheckWindow.cs  MapControl.cs  MapOptionsDialog.cs  (+40 more)
(+708 files in other folders)
