# ABOUTME: Rust port of DBuilder.Map (UDB Source/Core/Map): map elements and MapSet.
# ABOUTME: First slice: element records and Doom-format map assembly from lump codecs.

[package]
name = "dbuilder-map"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
dbuilder-geometry = { path = "../dbuilder-geometry" }
dbuilder-io = { path = "../dbuilder-io" }
