# ABOUTME: Rust port of DBuilder.Rendering: renderer math and batch building.
# ABOUTME: First slice is GPU-independent 2D view transforms and line batches.

[package]
name = "dbuilder-rendering"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
dbuilder-geometry = { path = "../dbuilder-geometry" }
dbuilder-map = { path = "../dbuilder-map" }
